# Rustiniparser

./: CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
examples/: ini_demo.rs
examples/c/: sample.c
examples/cpp/: sample.cpp
include/: rustiniparser.h
src/: ffi.rs  lib.rs
tests/: integration.rs
tests/ffi/: Makefile  test_ffi.c  test_ffi.cpp
tests/fixtures/: minimal.ini  sample.ini
