[package]
name = "rustiniparser"
version = "1.0.1"
edition = "2021"
rust-version = "1.63"
authors = ["Anand <truchipinfo@gmail.com>"]
description = "A tiny in-memory INI store: load INI text, read values back as typed data, and modify/add entries."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/TruchipTech/Rustiniparser"
keywords = ["ini", "config", "parser", "configuration"]
categories = ["parsing", "config"]

[lib]
name = "rustiniparser"
path = "src/lib.rs"
# rlib: link from Rust. staticlib (.a) and cdylib (.so/.dll/.dylib): link from
# C/C++ via the C ABI exposed in `src/ffi.rs` (header: include/rustiniparser.h).
crate-type = ["rlib", "staticlib", "cdylib"]

[[example]]
name = "ini_demo"
path = "examples/ini_demo.rs"

# Debug builds (the default `cargo build`): no optimisation, full debug info
# and debug assertions / overflow checks on for easy diagnosis.
[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true

# Speed-oriented release builds: whole-program optimisation via a single
# codegen unit and fat LTO, with unwinding tables dropped (panic = abort).
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# Size-oriented builds: `cargo build --profile min-size`.
[profile.min-size]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
